--- a/src/scripting/Makefile
+++ b/src/scripting/Makefile
@@ -1,7 +1,7 @@
 FILES	= main.c interpreter.c expression.c heap.c ../exec.c ../parser.c ../builtins.c
 CC	= gcc
 CFLAGS	= -I../../include/ \
-     -lasan -fsanitize=undefined
+     -lasan -fsanitize=undefined -lm
 
 test:		$(FILES)
 		$(CC) $(CFLAGS) $(FILES) -o test
